--- a/EvaluationApi/appsettings.json
+++ b/EvaluationApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "server=mysql-aspnet-core-poi.alwaysdata.net;user=271461;password=LIN&njkkja;database=aspnet-core-poi_app;"
+  }
 }
