--- a/EvaluationApi/appsettings.json
+++ b/EvaluationApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjXWRgJMFPU4",
+    "Issuer": "http://localhost:5001",
+    "Audience": "http://localhost:5001"
+  }
 }
