- Retrait d'un des constructeurs de Poi - Ajustement .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -792,5 +792,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudio,csharp,windows,nwjs,aspnetcore
 
-.EvaluationApi/Ressources/
-.Ressources/
+EvaluationApi/Ressources/
