--- a/EvaluationApi/appsettings.json
+++ b/EvaluationApi/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ProdCurrentWorkingDirectory": "D:/home/site",
   "ConnectionStrings": {
     "Default": "server=mysql-aspnet-core-poi.alwaysdata.net;user=271461;password=LIN&njkkja;database=aspnet-core-poi_app;"
   },
