update xml file

--- a/EvaluationApi/EvaluationApi.csproj
+++ b/EvaluationApi/EvaluationApi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>D:\home\site\Api.xml</DocumentationFile>
+    <DocumentationFile>..\EvaluationApi\Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Custom' " />
