--- a/EvaluationApi/EvaluationApi.csproj
+++ b/EvaluationApi/EvaluationApi.csproj
@@ -36,10 +36,6 @@
     <None Remove="BCrypt.Net-Next" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -51,5 +47,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Ressources\Images\" />
   </ItemGroup>
 </Project>
